--- a/src/Nvents/Nvents.csproj
+++ b/src/Nvents/Nvents.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Events.cs" />
     <Compile Include="IEvent.cs" />
+    <Compile Include="IHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EventHandler.cs" />
     <Compile Include="Services\InProcessService.cs" />
