--- a/src/Nvents.Tests/Nvents.Tests.csproj
+++ b/src/Nvents.Tests/Nvents.Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BarEvent.cs" />
     <Compile Include="DummyHandler.cs" />
     <Compile Include="DummyService.cs" />
+    <Compile Include="EncryptionTests.cs" />
     <Compile Include="EventsTests.cs" />
     <Compile Include="FooEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -57,6 +58,7 @@
       <Name>Nvents</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
