--- a/src/Nvents/Nvents.csproj
+++ b/src/Nvents/Nvents.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Services\Network\IEventServiceHost.cs" />
     <Compile Include="Services\Network\MultiEventServiceClient.cs" />
     <Compile Include="Services\Network\EncryptableNetDataContractFormatAttribute.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
