--- a/src/Nvents/Nvents.csproj
+++ b/src/Nvents/Nvents.csproj
@@ -50,8 +50,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EventHandler.cs" />
     <Compile Include="Services\InProcessService.cs" />
+    <Compile Include="Services\IPublisher.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\AutoNetworkService.cs" />
+    <Compile Include="Services\ISubscriber.cs" />
     <Compile Include="Services\NetworkService.cs" />
     <Compile Include="Services\Network\EncryptableNetDataContractSerializer.cs" />
     <Compile Include="Services\Network\EncryptionBehavior.cs" />
