added EventSubscription to enable subscribing to events using standard .NET events

--- a/src/Nvents.Tests/Nvents.Tests.csproj
+++ b/src/Nvents.Tests/Nvents.Tests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DummyService.cs" />
     <Compile Include="EncryptionTests.cs" />
     <Compile Include="EventsTests.cs" />
+    <Compile Include="EventSubscriptionTests.cs" />
     <Compile Include="FooChildEvent.cs" />
     <Compile Include="FooEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
