untyped handlers are now registered with their proper event type

--- a/src/Nvents/Nvents.csproj
+++ b/src/Nvents/Nvents.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Services\Network\ServiceDiscoverer\ServiceLocator.cs" />
     <Compile Include="Services\Network\ServiceDiscoverer\ServicePublisher.cs" />
     <Compile Include="Services\ServiceBase.cs" />
-    <Compile Include="Services\WrappingHandler.cs" />
+    <Compile Include="Services\HandlerUtility.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
