--- a/src/Samples/Chat.Moderator.Tests/packages.config
+++ b/src/Samples/Chat.Moderator.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="nvents" version="0.6" />
   <package id="xunit" version="1.7.0.1540" />
   <package id="Ninject" version="2.2.1.0" />
+  <package id="Caliburn.Micro" version="1.0.0" />
 </packages>
