--- a/src/Samples/Chat.Moderator/packages.config
+++ b/src/Samples/Chat.Moderator/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="nvents" version="0.6" />
   <package id="Ninject" version="2.2.1.0" />
+  <package id="Caliburn.Micro" version="1.0.0" />
 </packages>
