--- a/src/Nvents.Tests/Nvents.Tests.csproj
+++ b/src/Nvents.Tests/Nvents.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="InProcessServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBaseTest.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nvents\Nvents.csproj">
