--- a/src/Nvents.Tests/Nvents.Tests.csproj
+++ b/src/Nvents.Tests/Nvents.Tests.csproj
@@ -73,7 +73,7 @@
     <Compile Include="FooBarHandler.cs" />
     <Compile Include="FooChildEvent.cs" />
     <Compile Include="FooEvent.cs" />
-    <Compile Include="InProcessServiceTests.cs" />
+    <Compile Include="InMemoryServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBaseTest.cs" />
     <Compile Include="Test.cs" />
