--- a/src/Nvents.Tests/Nvents.Tests.csproj
+++ b/src/Nvents.Tests/Nvents.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="FooChildEvent.cs" />
     <Compile Include="FooEvent.cs" />
     <Compile Include="InMemoryServiceTests.cs" />
+    <Compile Include="NamedPipesServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBaseTest.cs" />
     <Compile Include="Test.cs" />
