--- a/src/Nvents/Nvents.csproj
+++ b/src/Nvents/Nvents.csproj
@@ -69,30 +69,33 @@
     <Compile Include="Services\EventHandler.cs" />
     <Compile Include="EventSubscription.cs" />
     <Compile Include="Services\InMemoryService.cs" />
-    <Compile Include="Services\Network\NamedPipesClient.cs" />
+    <Compile Include="Services\Wcf\NamedPipesEventServiceClient.cs" />
+    <Compile Include="Services\Wcf\NamedPipesEventServiceHost.cs" />
+    <Compile Include="Services\Wcf\TcpEventServiceClient.cs" />
+    <Compile Include="Services\Wcf\TcpEventEventServiceHost.cs" />
     <Compile Include="Services\NamedPipesService.cs" />
     <Compile Include="Services\IPublisher.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\AutoNetworkService.cs" />
     <Compile Include="Services\ISubscriber.cs" />
     <Compile Include="Services\NetworkService.cs" />
-    <Compile Include="Services\Network\EncryptableNetDataContractSerializer.cs" />
-    <Compile Include="Services\Network\EncryptionBehavior.cs" />
-    <Compile Include="Services\Network\EventPublishedEventArgs.cs" />
-    <Compile Include="Services\Network\EventService.cs" />
-    <Compile Include="Services\Network\EventServiceHost.cs" />
-    <Compile Include="Services\Network\IEventService.cs" />
-    <Compile Include="Services\Network\IEventServiceHost.cs" />
-    <Compile Include="Services\Network\NamedPipesEventServiceHost.cs" />
-    <Compile Include="Services\Network\MultiEventServiceClient.cs" />
-    <Compile Include="Services\Network\EncryptableNetDataContractFormatAttribute.cs" />
-    <Compile Include="Services\Network\ServiceDiscoverer\HostResponse.cs" />
-    <Compile Include="Services\Network\ServiceDiscoverer\Service.cs" />
-    <Compile Include="Services\Network\ServiceDiscoverer\ServiceDiscoverer.cs" />
-    <Compile Include="Services\Network\ServiceDiscoverer\ServiceLocator.cs" />
-    <Compile Include="Services\Network\ServiceDiscoverer\ServicePublisher.cs" />
+    <Compile Include="Services\Wcf\EncryptableNetDataContractSerializer.cs" />
+    <Compile Include="Services\Wcf\EncryptionBehavior.cs" />
+    <Compile Include="Services\Wcf\EventPublishedEventArgs.cs" />
+    <Compile Include="Services\Wcf\WcfEventService.cs" />
+    <Compile Include="Services\Wcf\WcfEventServiceHostBase.cs" />
+    <Compile Include="Services\Wcf\IEventService.cs" />
+    <Compile Include="Services\Wcf\IEventServiceHost.cs" />
+    <Compile Include="Services\Wcf\WcfEventServiceClientBase.cs" />
+    <Compile Include="Services\Wcf\EncryptableNetDataContractFormatAttribute.cs" />
+    <Compile Include="Services\Wcf\Discovery\HostResponse.cs" />
+    <Compile Include="Services\Wcf\Discovery\Service.cs" />
+    <Compile Include="Services\Wcf\Discovery\ServiceDiscoverer.cs" />
+    <Compile Include="Services\Wcf\Discovery\ServiceLocator.cs" />
+    <Compile Include="Services\Wcf\Discovery\ServicePublisher.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\HandlerUtility.cs" />
+    <Compile Include="Services\Wcf\WcfServiceBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
