--- a/Nvents/Nvents.csproj
+++ b/Nvents/Nvents.csproj
@@ -66,7 +66,7 @@
     <Compile Include="IEvent.cs" />
     <Compile Include="IHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\EventHandler.cs" />
+    <Compile Include="Services\EventRegistration.cs" />
     <Compile Include="EventSubscription.cs" />
     <Compile Include="Services\InMemoryService.cs" />
     <Compile Include="Services\Wcf\NamedPipesEventServiceClient.cs" />
