--- a/Samples/Chat.Moderator.Tests/Chat.Moderator.Tests.csproj
+++ b/Samples/Chat.Moderator.Tests/Chat.Moderator.Tests.csproj
@@ -40,8 +40,9 @@
     <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.2.2.1.0\lib\.NetFramework 4.0\Ninject.dll</HintPath>
     </Reference>
-    <Reference Include="Nvents">
-      <HintPath>..\packages\nvents.0.6\lib\NET40\Nvents.dll</HintPath>
+    <Reference Include="Nvents, Version=0.7.4551.32560, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\nvents.0.7\lib\net40\Nvents.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
