--- a/Nvents.Tests/Nvents.Tests.csproj
+++ b/Nvents.Tests/Nvents.Tests.csproj
@@ -75,7 +75,9 @@
     <Compile Include="EventSubscriptionTests.cs" />
     <Compile Include="FooBarHandler.cs" />
     <Compile Include="FooChildEvent.cs" />
+    <Compile Include="UniqueEvent.cs" />
     <Compile Include="FooEvent.cs" />
+    <Compile Include="CombinationServiceTests.cs" />
     <Compile Include="InMemoryServiceTests.cs" />
     <Compile Include="NamedPipesServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,6 +94,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
