--- a/Nvents.Tests/Nvents.Tests.csproj
+++ b/Nvents.Tests/Nvents.Tests.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BarEvent.cs" />
+    <Compile Include="CombinationServiceNetworkTests.cs" />
     <Compile Include="DummyFooSubscriptions.cs" />
     <Compile Include="DummyHandler.cs" />
     <Compile Include="DummyService.cs" />
